[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/InputDumper.gd" type="Script" id=1]
[ext_resource path="res://scenes/GameState.tscn" type="PackedScene" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/DroidSans.ttf"

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = SubResource( 1 )

[node name="Replay" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="GameState" parent="." instance=ExtResource( 2 )]

[node name="Names" type="ColorRect" parent="."]
visible = false
margin_right = 800.0
margin_bottom = 800.0
color = Color( 0, 0, 0, 0.839765 )

[node name="Champ1" type="Label" parent="Names"]
margin_right = 800.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 1, 1 )
text = "Champion 1"
align = 1
valign = 1
autowrap = true

[node name="Champ2" type="Label" parent="Names"]
margin_top = 500.0
margin_right = 800.0
margin_bottom = 800.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Champion 2"
align = 1
valign = 1
autowrap = true

[node name="VS" type="Label" parent="Names"]
margin_top = 300.0
margin_right = 800.0
margin_bottom = 500.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "VS"
align = 1
valign = 1
autowrap = true

[node name="Score1" type="Label" parent="."]
visible = false
margin_left = 292.0
margin_top = 789.0
margin_right = 434.0
margin_bottom = 865.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 1, 1 )
text = "0"
valign = 1
autowrap = true

[node name="Score2" type="Label" parent="."]
visible = false
margin_left = 393.0
margin_top = 789.0
margin_right = 535.0
margin_bottom = 865.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "0"
align = 2
valign = 1
autowrap = true

